# AcademicLedger

./: CMakeLists.txt  README.md
build_new/: CMakeCache.txt
include/: addstudentdialog.h  addteacherdialog.h  adminview.h  datastore.h  disciplinemarkdialog.h  exceptionhandler.h  filemanager.h  gradedialog.h  homeworkdialog.h  list.hpp  logindialog.h  mainwindow.h  markdialog.h  studentview.h  teacherview.h  user.h
src/: addstudentdialog.cpp  addteacherdialog.cpp  adminview.cpp  datastore.cpp  disciplinemarkdialog.cpp  exceptionhandler.cpp  filemanager.cpp  gradedialog.cpp  homeworkdialog.cpp  init_demo_data.cpp  logindialog.cpp  main.cpp  mainwindow.cpp  markdialog.cpp  registrationdialog.cpp  studentview.cpp  teacherview.cpp
